Most of the site navigation is done, you can go to the edit/add/view pages for home nodes and leaf nodes

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,5 +1,6 @@
 {
     "/js/app.js": "/js/app.js",
+    "/css/nodes.css": "/css/nodes.css",
     "/css/app.css": "/css/app.css",
     "/js/nodes.js": "/js/nodes.js"
 }
